--- a/crm/Dockerfile
+++ b/crm/Dockerfile
@@ -1,1 +1,13 @@
-FROM alpine
+FROM python:3.13-slim
+
+WORKDIR /app
+
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY app/ app/
+COPY consumer.py consumer.py
+
+EXPOSE 8001
+
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8001"]
