--- a/erp/Docker-compose.yml
+++ b/erp/Docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   erp:
     build:
-      context: ./erp
+      context: .
     container_name: erp_service
     volumes:
       - ./erp:/app
