--- a/erp/Docker-compose.yml
+++ b/erp/Docker-compose.yml
@@ -18,7 +18,7 @@ services:
 
   rabbitmq:
     image: rabbitmq:3-management
-    container_name: rabbitmq
+    container_name: rabbitmq2
     ports:
       - "5672:5672"
       - "15672:15672"
