--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - "5672:5672"      # Port für RabbitMQ Verbindungen (AMQP)
       - "15672:15672"    # Port für das RabbitMQ Management UI
     environment:
-      RABBITMQ_DEFAULT_USER: user
-      RABBITMQ_DEFAULT_PASS: password
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
     networks:
       - backend
 
@@ -18,6 +18,7 @@ services:
     container_name: ecommerce_service
     depends_on:
       - rabbitmq
+      - logging
     networks:
       - backend
 
@@ -26,12 +27,28 @@ services:
     container_name: erp_service
     depends_on:
       - rabbitmq
+      - logging
     networks:
       - backend
 
   crm:
     build: ../crm
     container_name: crm_service
+    depends_on:
+      - rabbitmq
+      - logging
+    networks:
+      - backend
+      
+  logging:
+    build: ../logging
+    container_name: logging_service
+    environment:
+      - RABBITMQ_URL=amqp://guest:guest@rabbitmq/
+    volumes:
+      - ../logging/logs:/app/logs
+    ports:
+      - "8002:8002"  # Logging-Service API Port
     depends_on:
       - rabbitmq
     networks:
