--- a/erp2/Dockerfile
+++ b/erp2/Dockerfile
@@ -3,27 +3,12 @@ FROM python:3.13-slim
 # Set the working directory inside the container
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends gcc python3-dev && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-
 # Copy requirements first for better layer caching
-COPY requirements.txt /app/requirements.txt
-
-# Install dependencies
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code
-COPY . /app/
-
-# Create logs directory if it doesn't exist
-RUN mkdir -p logs
-
-# Set environment variables
-ENV PYTHONPATH=/app
-ENV PYTHONUNBUFFERED=1
+COPY . .
 
 # Expose the gRPC port
 EXPOSE 50051
