--- a/erp2/Dockerfile
+++ b/erp2/Dockerfile
@@ -1,17 +1,12 @@
 FROM python:3.13-slim
 
-# Set the working directory inside the container
 WORKDIR /app
 
-# Copy requirements first for better layer caching
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application code
 COPY . .
 
-# Expose the gRPC port
-EXPOSE 50051
+EXPOSE 50052
 
-# Start the ERP2 server
-CMD ["python", "-m", "app.main"]
+CMD ["python", "server.py"]
