fixed docker stop times

--- a/ecommerce/Dockerfile
+++ b/ecommerce/Dockerfile
@@ -12,10 +12,12 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # 4. Code kopieren
 COPY app/ app/
+COPY entrypoint.sh .
+RUN chmod +x entrypoint.sh
 
 # 5. Port öffnen (nur informativ)
 EXPOSE 8000
 
 # 6. Startbefehl
 # 7. Initialize the database before starting the application
-CMD ["sh", "-c", "python -c 'from app.db import init_db; import asyncio; asyncio.run(init_db())' && uvicorn app.main:app --host 0.0.0.0 --port 8000"]
+ENTRYPOINT ["./entrypoint.sh"]
